overflow issue solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,10 @@
   font-style: normal;
   font-display: swap;
 }
+html,
+body {
+  overflow-x: hidden;
+}
 body {
   background: var(--background);
   color: var(--foreground);
